--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Jin Shang</h1>
+<h1>Rakshith S Srinivasa</h1>
 </div>
 <table class="imgtable"><tr><td>
 <img src="/Users/Rakshith/Pictures/Rakshith.jpg" alt="alt text" width="326px" height="245px" />&nbsp;</td>
