--- a/publications.html
+++ b/publications.html
@@ -15,10 +15,8 @@
 <div class="menu-category">Ankit Singh Rawat</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="publications.html" class="current">Publications</a></div>
-<div class="menu-item"><a href="talks.html">Talks</a></div>
-<div class="menu-item"><a href="services.html">Services</a></div>
-<div class="menu-item"><a href="cv.pdf">Curriculum&nbsp;Vitae</a></div>
-<div class="menu-item"><a href="https://scholar.google.com/citations?user=U0_ab4cAAAAJ&hl=en">Google&nbsp;Scholar</a></div>
+<div class="menu-item"><a href="CV.pdf">Curriculum&nbsp;Vitae</a></div>
+<div class="menu-item"><a href="https://scholar.google.com/citations?user=GUXFO7EAAAAJ&hl=en">Google&nbsp;Scholar</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
