--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         h1, h2 {
             color: #2c3e50;
         }
+    h2 {
+        margin-left: 170px; /* Adjust to align with the text */
+    }
         .footer {
             text-align: center;
             margin-top: 20px;
@@ -37,6 +40,7 @@
         .profile-pic {
             float: left;
             margin-right: 20px;
+            margin-bottom: 20px;
             border-radius: 50%;
             width: 150px;
             height: 150px;
@@ -51,7 +55,7 @@
             <h1>Rakshith S Srinivasa</h1>
             <p>
                 <a href="https://scholar.google.com/citations?user=GUXFO7EAAAAJ&hl=en" target="_blank">Google Scholar</a> | 
-                <a href="Rakshith_Srinivasa_CV.pdf" target="_blank">CV (PDF)</a> | 
+                <a href="Rakshith_Srinivasa_CV.pdf" target="_blank">CV</a> | 
                 <span id="email"></span>
             </p>
         </header>
@@ -60,7 +64,8 @@
             <h2>About Me</h2>
             <p>I am a senior machine learning researcher at Samsung Research America, Mountain View, CA.</p>
             <p>My research interests include multimodal LLMs, cross-modal representation alignment and efficient inference. I am also interested in efficient algorithms for linear algebraic computations and in using tools from randomized linear algebra to solve optimization problems. </p>
-            <p>I obtained my Ph.D. from Georgia Institute of Technology, Atlanta in 2020. During my Ph.D., I worked on subspace learning, sketching methods for high-dimensional linear algebra, and array signal processing. Following my Ph.D., I was a research scientist at <a href="https://iqvia.com" target="_blank">IQVIA</a>, where I worked on graph neural networks and deep learning based ranking methods for applications in clinical trial patient recruitment and prediction of COVID-19 spread. I joined Samsung Research America as a senior ML researcher in 2021, where I have been working on multimodal learning, on-device AI, and LLM based language translation.</p>
+            <p>I obtained my Ph.D. from Georgia Institute of Technology, Atlanta in 2020. My advisor was <a href="https://ece.gatech.edu/directory/justin-romberg" target="_blank">Dr. Justin Romberg</a>. I also worked closely with <a href="https://mdav.ece.gatech.edu/" target="_blank">Dr. Mark Davenport</a>. During my Ph.D., I worked on subspace learning and sketching methods for high-dimensional linear algebra for applications in array signal processing. Following my Ph.D., I was a research scientist at <a href="https://iqvia.com" target="_blank">IQVIA</a>, where I worked on graph neural networks and deep learning based ranking methods for applications in clinical trial patient recruitment and prediction of COVID-19 spread. I joined Samsung Research America as a senior ML researcher in 2021, where I have been working on multimodal learning, on-device AI, and LLM based language translation.</p>
+           <p> I enjoy playing tennis(and most other racket sports), hiking, playing scrabble and <a href="https://www.instagram.com/intermittent_eating/" target="_blank">cooking</a></p>
         </section>
 
         <section class="section" id="publications">
