--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
         }
         .section {
             margin-bottom: 40px;
+            clear: both;
         }
         h1, h2 {
             color: #2c3e50;
         }
+   
+    h1 {
+       margin-top: 20px;
+       }
+
     h2 {
-        margin-left: 170px; /* Adjust to align with the text */
+        margin-left: 0; /* Adjust to align with the text */
     }
         .footer {
             text-align: center;
