--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Personal Webpage</title>
+    <title>Rakshith Srinivasa - Personal Webpage</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
@@ -26,7 +26,9 @@
         }
    
     h1 {
-       margin: 20px 0 0 170px;
+       margin-top: 40px;
+       margin-left: 170px;
+       margin-bottom: 0;
        }
 
     h2 {
